k8s/demo-apps/overlays/worldl/go-app-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-go-app-1
  annotations:
    cert-manager.io/cluster-issuer: spnw-intermediate-ca1-issuer
    cert-manager.io/common-name: "sample-go-app-1.vm.world1l.worldl.xpt"
spec:
  ingressClassName: nginx
  rules:
    - host: sample-go-app-1.vm.world1l.worldl.xpt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-go-app-1
                port:
                  number: 8080
    - host: worldl-sample-go-app-1.worldb.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-go-app-1
                port:
                  number: 8080
  tls:
    - hosts:
        - sample-go-app-1.vm.world1l.worldl.xpt
      secretName: sample-go-app-1-cert-secret
